Fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,7 @@ ul.members .status {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 12px;
+    margin-bottom: -5px;
 }
 
 ul.members .actions {
